fusion-cli-tests/test/e2e/syntax-error/fixture/src/main.js
// a syntax error should generate a compiler error
### // <- deliberate syntax error to test the compiler

export default function() {}
